Sistemazione HomePage - Proposta20200825

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="BB spa website"
+      content="BB S.p.A. website"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>BB s.p.a.</title>
+    <title>BB S.p.A.</title>
   </head>
   <body>
     <div id="custom-event-dispatcher"></div>
