Struttura Span - Cosa Facciamo 20200828ù

--- a/public/CosaFacciamoAll.html
+++ b/public/CosaFacciamoAll.html
@@ -1,33 +1,150 @@
-
 ///////////BB PARTNER PROGETTUALE
-<span style='width: 50%;'>
+<span>
     BB S.p.A. si pone non solo come esecutore, ma come vero e proprio <strong>partner progettuale, sicuro e
         affidabile</strong>, partecipa attivamente al processo di realizzazione dell’accessorio, così da garantire
     prestazioni sempre più complete, accurate e veloci.
+</span>
+<span>
 </span>
 
 
 
 ///////////CAMPIONATURA
+<span>
+    Il percorso dell’accessorio nasce nel reparto campionatura luogo dove l’idea del cliente prende forma,
+    dove si elaborano <strong>soluzioni costruttive innovative e moderne</strong>, avvalendosi, oltre alle
+    attrezzature tradizionali, anche della <strong>prototipazione rapida</strong>. <br><br>Fondamentale la competenza e
+    l'esperienza dei tecnici; qui la <strong>manualità e l'artigianalità</strong> sono alla base della realizzazione
+    dell’accessorio stesso.
+</span>
+<span>
+</span>
 
 ///////////INDUSTRIALIZZAZIONE
+<span>
+Validato il prototipo, il reparto industrializzazione perfeziona l’articolo per la realizzazione su larga scala,
+<strong>ottimizzando costi e tempistiche</strong>. <br><br>Si tratta di un centro di competenza fortemente orientato ai core
+business aziendali e costituisce il fondamentale <strong>anello di congiunzione tra</strong> le aree tecnica di<strong>
+    progettazione e </strong>quella di <strong>produzione</strong>.
+</span>
+<span>
+</span>
+ 
 
 ///////////MATERIE E MATERIALI
+<span>
+BB S.p.A. è in grado di lavorare su <strong>diverse tipologie di materiali</strong>, oltre a quelli tradizionali quali
+ottone, acciaio, alluminio e materiali plastici, il reparto campionatura BB può esplorare ogni materiale desiderato dal
+cliente, effettuando ricerche di mercato e tecnologiche.
+</span>
+<span>BB è attiva nella ricerca e sviluppo di nuovi materiali,
+mirati, a parità di performance, alla <strong>sostenibilità ambientale</strong>.<br>BB è in grado di realizzare il
+prodotto finale in diverse finiture superficiali, ricercando anche soluzioni innovative.
+</span>
 
 ///////////PRODUZIONE A 360°
+<span>
+BB S.p.A. è in grado di curare l’<strong>intero ciclo della produzione al suo interno</strong> o avvalendosi, nel caso
+di concezione stampata, della collaborazione con <strong>BB FEINMECHANIK</strong>, azienda del gruppo, specializzata in
+<strong>realizzazione stampi e stampaggi a caldo</strong>. La modernità delle unità produttive, il costante
+aggiornamento e ampliamento del parco macchine e l'alta professionalità del personale permette a BB di soddisfare in
+tempi brevi <strong>qualsiasi richiesta del cliente</strong>, mantenendo in ogni caso uno <strong>standard qualitativo
+    elevato</strong>, sia nelle piccole che nelle grandi tirature.
+</span>
+<span>
+    L'azienda, inoltre, è in grado di realizzare
+qualsiasi tipo di <strong>trattamento superficiale</strong>, fornendo così l'accessorio finito secondo le richieste del
+cliente. La customer care è sempre garantita dall’<strong>ufficio commerciale</strong> che accompagna l’articolo in ogni
+sua fase di lavorazione fino alla consegna al cliente.
+</span>
 
 ///////////LAVORAZIONI MECCANICHE
+<span>
+Il reparto lavorazioni meccaniche è costituto da <strong>torni e da centri di lavoro a controllo numerico</strong>,
+alcuni particolarmente indicati per le lavorazioni di incisione, altri più adatti alla produzione in serie.<br><br>Inoltre
+dispone di un reparto attrezzato con <strong>macchinari per il taglio, l’incisione</strong> e la saldatura
+<strong>laser</strong>.
+</span>
+<span>
+</span>
 
 ///////////SALDATURA
+<span>
+Il reparto saldatura è costituito da <strong>20 moderne postazioni di lavoro</strong>, un <strong>forno rotativo
+    continuo</strong> a controllo elettronico, una <strong>fresa</strong> dedicata per la realizzazione di piazzature
+grafitiche per saldatura. <br><br>Le macchine, insieme al personale specializzato, permettono al reparto di rispondere a
+qualsiasi esigenza produttiva e qualitativa.
+</span>
+<span>
+</span>
 
 ///////////SMALTERIA
+<span>
+La smalteria BB è in grado di effettuare <strong>smaltature su superfici difficili</strong> guidando il cliente verso
+le scelte migliori.<br><br>Il personale qualificato del reparto cura anche il <strong>montaggio a mano</strong> di
+<strong>strass e pietre dure</strong> e realizza anche <strong>forme in cera</strong> per la realizzazione di manufatti
+con processo di <strong>fusione a cera persa</strong>, partendo dal primo prototipo realizzato interamente a mano da
+personale qualificato.
+</span>
+<span>
+</span>
 
 ///////////GALVANICA
+<span>
+BB dispone anche di un reparto galvanica moderno e all’avanguardia. La collaborazione interna con <strong>laboratori di
+    ricerca chimico-fisica</strong> permette di studiare <strong>finiture innovative</strong> e di rispondere a
+qualsiasi esigenza del cliente.<br><br>I reparti interni di <strong>vibro-finitura</strong> e <strong>pulimentatura</strong>,
+consentono di gestire e ottimizzare un processo dedicato come la <strong>elettrodeposizione galvanica</strong>
+rendendolo industrialmente efficiente e, al contempo, preservando standard qualitativi elevati.
+</span>
+<span>
+</span>
 
 ///////////MONTAGGIO
+<span>
+Il reparto montaggio è in grado di eseguire l’<strong>assemblaggio attento e curato</strong> di componenti in finitura
+preziosa, garantendo la <strong>funzionalità di meccanismi</strong> anche complessi e, allo stesso tempo, preservando
+l’estetica del prodotto.
+</span>
+<span>
+</span>
 
 ///////////TERMOFORMATURA
+<span>
+Il viaggio dell’accessorio si conclude nel <strong>reparto confezionamento</strong>, dove il prodotto viene
+accuratamente imballato nel <strong>plateau ecologico brevettato da BB</strong> o secondo le <strong>specifiche del
+    cliente</strong>.
+</span>
+<span>
+</span>
 
 ///////////PERCORSO DELLA QUALITÀ
+<span>
+Per garantire l’alta qualità del suo prodotto, BB opera un <strong>controllo rigoroso e costante</strong> delle
+eventuali difettosità in ogni fase del processo produttivo al fine di mantenere <strong>elevati gli standard di
+    qualità</strong> dell’intera filiera.
+    
+</span>
+<span>
+    All’interno del laboratorio di qualità, si eseguono <strong>prove
+        meccaniche e chimico-fisiche</strong>.
+    <strong>BB progetta</strong> e <strong>costruisce</strong> molte delle
+<strong>apparecchiature</strong> con cui vengono effettuati i test meccanici, richiesti dal cliente, per le prove
+chimico-fisiche si rivolge a <strong>laboratori esterni accreditati</strong>.
+</span>
 
 ///////////RICERCA E SVILUPPO
+<span>
+Grazie al reparto ricerca e sviluppo, BB è in grado di rispondere alle richieste produttive del cliente con lo sviluppo
+di sistemi e macchinari capaci di effettuare <strong>lavorazioni non convenzionali</strong> in maniera automatizzata,
+<strong>ottimizzando i tempi e i costi </strong>di quei processi produttivi fino ad oggi eseguiti manualmente.
+</span>
+<span>
+</span>
+
+///////////////////////////FOOTER
+Nel complesso, la struttura e le apparecchiature all’avanguardia che caratterizzano BB acquistano valore e prestigio
+soprattutto grazie alla <strong>competenza</strong>, l’<strong>efficienza</strong> e l’<strong>impegno</strong> dei suoi
+collaboratori: i responsabili della progettazione, gli addetti alla pianificazione e alla verifica del lavoro e i
+responsabili del controllo qualità integrano le rispettive professionalità alla <strong>continua ricerca
+    dell’eccellenza</strong> che contraddistingue l’azienda.
