--- a/public/index.html
+++ b/public/index.html
@@ -33,23 +33,23 @@
     <title>BB S.p.A.</title>
   </head>
   <body>
-    <div id="custom-event-dispatcher"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
-
+      
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+        
+        To begin the development, run `npm start` or `yarn start`.
+        To create a production bundle, use `npm run build` or `yarn build`.
+      -->
+      <div id="custom-event-dispatcher"></div>
   </body>
-  <script>
+  <!-- <script>
     let a = document.querySelector('#custom-event-dispatcher');
     // a.addEventListener('customevent', (e) => { console.log('custom event!!!!', e) });
     a.dispatchEvent(new CustomEvent('customevent', { detail: {data: 'custom event data!!!'} }));
-  </script>
+  </script> -->
 </html>
